workloads/clixx-web/services/clixx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clixx-service
  labels:
    app: clixx-web-app
    new_serv: CLIXX
spec:
  type: LoadBalancer
  selector:
    app: clixx-web-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
      nodePort: 30000
