workloads/clixx-web/services/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels: 
    app: nginx
    new_serv: clixx_serv_1
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
